# starlette-hot-reload

./: CHANGELOG.md  README.md  justfile  pyproject.toml
examples/: __init__.py  app.py
examples/basic/: __init__.py  app.py
examples/basic/templates/: index.html
examples/templates/: index.html
examples/with_tailwind/: app.py
src/starlette_hot_reload/: __init__.py  client.js  events.py  hot_reload.py  lifespan.py  middleware.py  watcher.py  websocket.py
tests/: __init__.py  force_quit_test.py  test_server.py  watcher_test.py
