[project]
name = "starlette-hot-reload"
version = "0.1.0"
description = "Hot reload for Starlette app with smart asset updates and HTML injection"
readme = "README.md"
authors = [
    { name = "pyk", email = "2213646+pyk@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "starlette>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
