[project]
name = "starlette-hot-reload"
version = "0.3.0"
description = "Hot reload for Starlette app with smart asset updates and HTML injection"
readme = "README.md"
authors = [
    { name = "pyk", email = "2213646+pyk@users.noreply.github.com" }
]
maintainers = [
    { name = "pyk", email = "2213646+pyk@users.noreply.github.com" }
]
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "starlette>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/pyk/starlette-hot-reload"
Documentation = "https://github.com/pyk/starlette-hot-reload/blob/main/README.md"
Changelog = "https://github.com/pyk/starlette-hot-reload/blob/main/CHANGELOG.md"
Funding = "https://github.com/sponsors/pyk"
Source = "https://github.com/pyk/starlette-hot-reload"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
    "starlette-tailwindcss>=0.2.0",
    "ty>=0.0.27",
    "uvicorn>=0.42.0",
]

# ty - settings
[tool.ty.src]
exclude = ["external"]

# ruff - settings
[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # D212 and D213 are incompatible; we use D212 (summary on first line)
    "D213",
    # D203 and D211 are incompatible; we use D211 (no blank line before class)
    "D203",
    # Trailing comma rule conflict with formatter
    "COM812",
]
exclude = ["external/**"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    # Allow usage of assert statement in test files
    "S101"
]

# pytest - settings
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "*.py",
]
norecursedirs = [
    "external"
]
